src/snapshots/transmute__parser__tests__full_example.snap
---
source: src/parser.rs
expression: root
---
functions:
  - name: main
    parameters:
      - username
    body:
      - let:
          variable: empty
          expression: "\"\""
      - let:
          variable: sqlite
          expression: "(sql . dataSource(\"sqlite:///db.sqlite\"))"
      - match:
          expression: "(http . get(\"/users/{{username}}\"))"
          arms:
            - condition: ((in . status) != 200)
              statements:
                - fail: "\"error fetching data\""
      - match:
          expression: in
          arms:
            - condition: dummy
              statements: []
      - fork:
          arms:
            - condition: dummy
              statements: []
      - join:
          - let:
              variable: x
              expression: "1"
  - name: fetchPosts
    parameters:
      - username
    body:
      - let:
          variable: query
          expression: "\"select title, text\nfrom post\nwhere username={username}\""
      - match:
          expression: (sqlite . query(query))
          arms:
            - condition: error
              statements:
                - fail: "\"unable to fetch posts from database for user {username}: {err}\""

