src/snapshots/transmute__parser__tests__if_simple.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Boolean(
                            true,
                        ),
                        span: 1:4; [3, 7],
                    },
                ),
                span: 1:4; [3, 7],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:11; [10, 12],
                    },
                ),
                span: 1:11; [10, 12],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: Block(
                    [
                        StmtId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:9; [8, 15],
            },
            Expression {
                id: ExprId {
                    id: 3,
                },
                kind: If(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 2,
                    },
                    None,
                ),
                span: 1:1; [0, 15],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:11; [10, 13],
            },
            Statement {
                id: StmtId {
                    id: 1,
                },
                kind: Expression(
                    ExprId {
                        id: 3,
                    },
                ),
                span: 1:1; [0, 15],
            },
        ],
        root: [
            StmtId {
                id: 1,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
