src/snapshots/transmute__parser__tests__let_statement.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "forty_two",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:17; [16, 18],
                    },
                ),
                span: 1:17; [16, 18],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Let(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 13],
                    },
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 19],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
